# ShapefilePlanning

./: CMakeLists.txt  README.md
data/: Building.dbf  Building.sbn  Building.sbx  Building.shp  Building.shx  Building1.dbf  Building1.sbn  Building1.sbx  Building1.shp  Building1.shx  Building1.xml  Green.dbf  Green.sbn  Green.sbx  Green.shp  Green.shp.xml  Green.shx  Road.dbf  Road.sbn  Road.sbx  Road.shp  Road.shp.xml  Road.shx  Water.dbf  Water.sbn  Water.sbx  Water.shp  Water.shp.xml  Water.shx
datanew/: building.sbn  building.sbx  building.shp  building.shx
include/: DataGet.hpp  Polygon.hpp  UTMtoWGS84.hpp  WGS84UTM.hpp  WGS84toUTM.hpp  geotf.hpp  vgp.h
src/: DataGet.cpp  UTMtoWGS84.cpp  WGS84toUTM.cpp  main copy 2.cpp  main copy path.cpp  main.cpp  main11.cpp  mainline1.cpp
